--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <!--echarts 表格组件-->
+    <script src="//cdn.bootcss.com/echarts/3.2.3/echarts.js"></script>
 </head>
 
 <body class="container-flow">
