--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <app></app>
+    <div id="app">
+        <app></app>
+    </div>
     <script src="./build/bundle.js"></script>
 </body>
 
