--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <!--<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">-->
     <!-- <link rel="stylesheet" href="./build/bootstrap/dist/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="build/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="build/bootstrap/css/bootstrap.min.css">
     <!-- 可选的Bootstrap主题文件（一般不用引入） -->
     <!--<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">-->
 
